--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "PDF para data.frame"
-output: html_document
+title: "PDF de projeto de lei para data.frame"
+output: github_document
 date: "2023-05-13"
 editor_options: 
   chunk_output_type: console
@@ -11,6 +11,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Sobre o texto do pdf
+
+PDF de um projeto de lei.
 
 Hierarquia:
 
@@ -208,7 +210,7 @@ tabela_final <- alineas %>%
     across(everything(), str_squish),
     across(everything(), ~ str_replace(.x, "_VAZIO_", ""))
   )
-tabela_final
+reactable::reactable(head(tabela_final, 20), wrap = FALSE)
 ```
 
 ```{r}
